<resources>
    <string name="app_name">extended-bmi-calculator</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="bmi">BMI:</string>
    <string name="_0">0</string>
    <string name="start_button">Start</string>
</resources>